// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEditBed Should display add edit bed form properly 1`] = `
<div
  className="main-container"
>
  <div
    className="admission-location-form"
  >
    <div
      className="block"
    >
      <div
        className="block-title"
      >
        Add
         Bed
        <a
          className="back-link"
          href="javascript:void(0);"
          onClick={[Function]}
          title="back"
        >
          &lt;&lt; Back
        </a>
      </div>
      <div
        className="block-content"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Location
            </label>
            <span
              id="location-name"
            >
              General Ward
            </span>
          </div>
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Row
            </label>
            <input
              id="row-field"
              onChange={[Function]}
              required={true}
              type="number"
              value={1}
            />
          </div>
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Column
            </label>
            <input
              id="column-field"
              onChange={[Function]}
              required={true}
              type="number"
              value={2}
            />
          </div>
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Bed Number
            </label>
            <input
              id="bed-number-field"
              onChange={[Function]}
              required={true}
              type="text"
              value=""
            />
          </div>
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Bed Type
            </label>
            <select
              id="bed-type"
              onChange={[Function]}
              required={true}
              value="deluxe"
            >
              <option
                key="1"
                value="deluxe"
              >
                deluxe
              </option>
              <option
                key="2"
                value="luxury"
              >
                luxury
              </option>
              <option
                key="3"
                value="dbl"
              >
                dbl
              </option>
            </select>
          </div>
          <div
            className="form-block"
          >
            <input
              className="btn btn-primary float-left margin-right"
              disabled={false}
              name="submit"
              type="submit"
              value="Save"
            />
            <input
              className="btn btn-danger float-left"
              name="submit"
              onClick={[Function]}
              type="button"
              value="Cancel"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddEditBed Should display add edit bed form properly 2`] = `
<div
  className="main-container"
>
  <div
    className="admission-location-form"
  >
    <div
      className="block"
    >
      <div
        className="block-title"
      >
        Edit
         Bed
        <a
          className="back-link"
          href="javascript:void(0);"
          onClick={[Function]}
          title="back"
        >
          &lt;&lt; Back
        </a>
      </div>
      <div
        className="block-content"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Location
            </label>
            <span
              id="location-name"
            >
              General Ward
            </span>
          </div>
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Row
            </label>
            <input
              id="row-field"
              onChange={[Function]}
              required={true}
              type="number"
              value={2}
            />
          </div>
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Column
            </label>
            <input
              id="column-field"
              onChange={[Function]}
              required={true}
              type="number"
              value={1}
            />
          </div>
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Bed Number
            </label>
            <input
              id="bed-number-field"
              onChange={[Function]}
              required={true}
              type="text"
              value="100-a"
            />
          </div>
          <div
            className="form-block"
          >
            <label
              className="form-title"
            >
              Bed Type
            </label>
            <select
              id="bed-type"
              onChange={[Function]}
              required={true}
              value="luxury"
            >
              <option
                key="1"
                value="deluxe"
              >
                deluxe
              </option>
              <option
                key="2"
                value="luxury"
              >
                luxury
              </option>
              <option
                key="3"
                value="dbl"
              >
                dbl
              </option>
            </select>
          </div>
          <div
            className="form-block"
          >
            <input
              className="btn btn-primary float-left margin-right"
              disabled={false}
              name="submit"
              type="submit"
              value="Save"
            />
            <input
              className="btn btn-danger float-left"
              name="submit"
              onClick={[Function]}
              type="button"
              value="Cancel"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
